--- a/manifest.json
+++ b/manifest.json
@@ -5,17 +5,6 @@
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#FFD700",
-  "description": "Analyze X profiles, detect bots, and laugh while learning!",
-  "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "description": "Analyze X profiles, detect bots, and have a laugh! 🤖⚡",
+  "icons": []
 }
